introspection: some fix for better python bindings

https://bugzilla.gnome.org/show_bug.cgi?id=793482